// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox can have checked state changed by theme: Checked Checkbox 1`] = `
<input
  aria-checked="true"
  class="sc-bdfBwQ sc-eCssSg jQfOhO kSpNXg"
  data-reach-custom-checkbox-input=""
  type="checkbox"
/>
`;

exports[`Checkbox can have checked state changed by theme: Unchecked Checkbox 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='192' height='192' fill='%23000000' viewBox='0 0 256 256'%3E%3Crect width='256' height='256' fill='none'%3E%3C/rect%3E%3Cpolyline points='216 72.005 104 184 48 128.005' fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='16'%3E%3C/polyline%3E%3C/svg%3E");
  background-size: 100%;
  background-position: center;
  background-repeat: no-repeat;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 18px;
  height: 18px;
  margin-right: 8px;
  border-radius: 4px;
  border-width: 1px;
  border-style: solid;
  padding: 2px;
  background-color: #333;
  -webkit-transition: background-color,border-color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: background-color,border-color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c1:focus {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c1:disabled,
.c1:disabled:focus,
.c1:disabled:hover,
.c1[aria-disabled=true],
.c1[aria-disabled=true]:focus,
.c1[aria-disabled=true]:hover {
  background-color: #EAEAEA;
  color: #8F8F8F;
  cursor: not-allowed;
  background-image: none;
}

.c1[aria-checked=true],
.c1[data-state="checked"] {
  background-color: #c33333;
}

<input
  aria-checked="false"
  class="c0 c1"
  data-reach-custom-checkbox-input=""
  type="checkbox"
/>
`;

exports[`Checkbox shows checkbox when checked: Checked Checkbox 1`] = `
<input
  aria-checked="true"
  class="sc-bdfBwQ sc-eCssSg hgWJxL bkxgiK"
  data-reach-custom-checkbox-input=""
  type="checkbox"
/>
`;

exports[`Checkbox shows checkbox when checked: Unchecked Checkbox 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='192' height='192' fill='%23000000' viewBox='0 0 256 256'%3E%3Crect width='256' height='256' fill='none'%3E%3C/rect%3E%3Cpolyline points='216 72.005 104 184 48 128.005' fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='16'%3E%3C/polyline%3E%3C/svg%3E");
  background-size: 100%;
  background-position: center;
  background-repeat: no-repeat;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 18px;
  height: 18px;
  margin-right: 8px;
  border-radius: 4px;
  border-width: 1px;
  border-style: solid;
  padding: 2px;
  background-color: #fff;
  -webkit-transition: background-color,border-color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: background-color,border-color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c1:focus {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c1:disabled,
.c1:disabled:focus,
.c1:disabled:hover,
.c1[aria-disabled=true],
.c1[aria-disabled=true]:focus,
.c1[aria-disabled=true]:hover {
  background-color: #EAEAEA;
  color: #8F8F8F;
  cursor: not-allowed;
  background-image: none;
}

.c1[aria-checked=true],
.c1[data-state="checked"] {
  background-color: #5850ec;
  border-color: #5850ec;
}

<input
  aria-checked="false"
  class="c0 c1"
  data-reach-custom-checkbox-input=""
  type="checkbox"
/>
`;
